Bug #59877 Wrong buffer pool selected in buf_read_ibuf_merge_pages()